# madsay

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  index.html  part1.txt  part2.txt  part3.txt
docs/: script.js  style.css
site/: index.html  script.js  style.css
src/: madsaygen.rs  main.rs
